backend/k8s/news-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-service
  namespace: backcd
spec:
  replicas: 2  # 기본 레플리카 수, HPA 사용 시 동적으로 조정 가능
  selector:
    matchLabels:
      app: news-service
  template:
    metadata:
      labels:
        app: news-service
    spec:
      containers:
        - name: news-service
          image: zlxldgus123/news-service:127
          ports:
            - containerPort: 8080
          resources:  # 리소스 요청 및 제한 설정
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
