backend/k8s/gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: backcd
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30083  # NodePort 설정
