backend/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-gateway
  namespace: backcd
spec:
  type: NodePort
  selector:
    app: spring-cloud-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30083  # NodePort 설정
