backend/k8s/news-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: news-service
  namespace: backcd
spec:
  type: NodePort
  selector:
    app: news-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30082  # NodePort는 기존 30081을 사용
