backend/k8s/stock-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  namespace: backcd
spec:
  type: NodePort
  selector:
    app: stock-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30085  # NodePort는 기존 30081을 사용
