backend/k8s/user-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: backcd
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30081  # NodePort는 기존 30081을 사용
