backend/k8s/gateway-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-service-ingress
  namespace: backcd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - ssafy11s.com
      secretName: ssafy11s-tls  # TLS 인증서가 저장된 Secret 이름
  rules:
    - host: ssafy11s.com
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service  # 올바른 서비스 이름으로 수정
                port:
                  number: 80
          - path: /api/stock
            pathType: Prefix
            backend:
              service:
                name: stock-service  # 올바른 서비스 이름으로 수정
                port:
                  number: 80
          - path: /api/news
            pathType: Prefix
            backend:
              service:
                name: news-service  # 올바른 서비스 이름으로 수정
                port:
                  number: 80
