backend/k8s/stock-service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-service-ingress
  namespace: backcd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ssafy11s.com
      secretName: stock-service-tls  # 새로운 TLS Secret으로 변경
  rules:
    - host: ssafy11s.com
      http:
        paths:
          - path: /api  # User-Service는 /api 경로에서 제공됨
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 80
